# prompt-to-ai

./: Cargo.toml  README.md  build.rs
.aidocs/: codebase-overview.md
.claude/: settings.local.json
.github/workflows/: rust-ci.yml
docs/: codebase-overview.md  project-structure.md
src/: commit.rs  config.rs  lib.rs  ls.rs  main.rs  unpack.rs  utils.rs
src/assets/claude/: CLAUDE.md  file_suggestion.py  settings.json
src/assets/claude/agents/: file-summarizer.md
src/assets/skills/ai-docs-commit/: SKILL.md
src/assets/skills/ask_questions_if_underspecified/: SKILL.md
src/assets/skills/github-mcp-with-retry/: SKILL.md
src/assets/skills/read-codebase-docs/: SKILL.md
src/assets/skills/read-through-codebase/: SKILL.md
src/assets/skills/read-through-codebase/instructions/: codebase-overview.md  commit.md
src/assets/skills/summarize-file/: SKILL.md
src/assets/skills/update-codebase-understanding/: SKILL.md
src/config/: llm.rs  utils.rs
src/utils/: assets.rs  io.rs  llm.rs
