[package]
name = "prompt_to_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.48", features = ["derive"] }
dirs = "6"
git2 = "0.20.2"
regex = "1.11.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.17"
toml = "0.9.10"

[[bin]]
name = "pai"  
path = "src/main.rs"
